# docs/swagger.json
@@ -16,9 +16,9 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/login/{id}": {
+        "/login": {
             "post": {
-                "description": "Get a login by ID",
+                "description": "Get a login",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,15 +28,8 @@
                 "tags": [
                     "login"
                 ],
-                "summary": "Get a login by ID",
+                "summary": "Get a login",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Login ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Login Information",
                         "name": "loginInfo",
@@ -68,7 +61,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "products"
                 ],
                 "summary": "Get list of product",
                 "responses": {
@@ -156,7 +149,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "product"
+                    "products"
                 ],
                 "summary": "Update a product by ID",
                 "parameters": [
@@ -221,6 +214,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get list of users",
                 "consumes": [
                     "application/json"
